--- a/packages/PrintSpooler/res/values/strings.xml
+++ b/packages/PrintSpooler/res/values/strings.xml
@@ -139,18 +139,20 @@
 
     <!-- Title of an application permission, listed so the user can choose whether they want
          to allow the application to do this. -->
-    <string name="permlab_accessAllPrintJobs">access all print jobs</string>
+    <string name="permlab_accessAllPrintJobs" translatable="false">access all print jobs</string>
     <!-- Description of an application permission, listed so the user can choose whether
          they want to allow the application to do this. -->
-    <string name="permdesc_accessAllPrintJobs">Allows the holder to access print jobs
-        created by another app. Should never be needed for normal apps.</string>
+    <string name="permdesc_accessAllPrintJobs" translatable="false">Allows the holder to access
+        print jobs created by another app. Should never be needed for normal apps.</string>
 
     <!-- Title of an application permission, listed so the user can choose whether they want
          to allow the application to do this. -->
-    <string name="permlab_startPrintServiceConfigActivity">start print service configuration activities</string>
+    <string name="permlab_startPrintServiceConfigActivity" translatable="false">start print
+        service configuration activities</string>
     <!-- Description of an application permission, listed so the user can choose whether they
          want to allow the application to do this. -->
-    <string name="permdesc_startPrintServiceConfigActivity">Allows the holder to start the
-        configuration activities of a print service. Should never be needed for normal apps.</string>
+    <string name="permdesc_startPrintServiceConfigActivity" translatable="false">Allows the
+        holder to start the configuration activities of a print service. Should never be needed
+        for normal apps.</string>
 
 </resources>
